--- a/pipelines.ipynb
+++ b/pipelines.ipynb
@@ -1814,14 +1814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 40/40 [00:19<00:00,  2.10trial/s, best loss: 8.549212924556542]\n",
+      "100%|██████████| 40/40 [00:19<00:00,  2.11trial/s, best loss: 8.569474762575908]\n",
       "Found minimum after 40 trials:\n",
       "{'max_depth2': 1, 'n_estimators2': 1, 'regressor_type': 1}\n"
      ]
@@ -1910,12 +1910,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run \"mlflow server\" to see the loggin dashboard. There, we can see that \"Decision Tree Regressor\" has the best performance (the less MAE the better) when using max_depth = 0, to test the model's performance against another test set:"
+    "Run \"mlflow server\" to see the loggin dashboard. There, we can see that RandomForestRegressor has the best performance (the less MAE the better) when using max_depth=4  and n_estimators=150, to test the model's performance against another test set:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1953,9 +1953,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>RandomForestRegressor</th>\n",
-       "      <td>8.844579</td>\n",
-       "      <td>8.546093</td>\n",
-       "      <td>8.736246</td>\n",
+       "      <td>8.930245</td>\n",
+       "      <td>8.592484</td>\n",
+       "      <td>8.729826</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1964,17 +1964,17 @@
       "text/plain": [
        "                       train_mae   dev_mae  test_mae\n",
        "name                                                \n",
-       "RandomForestRegressor   8.844579  8.546093  8.736246"
+       "RandomForestRegressor   8.930245  8.592484  8.729826"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# use best params on TEST set\n",
-    "estimator = RandomForestRegressor(max_depth=4, n_estimators=50)\n",
+    "estimator = RandomForestRegressor(max_depth=4, n_estimators=150)\n",
     "estimator.fit(X_train, y_train)\n",
     "    \n",
     "y_train_hat = estimator.predict(X_train)\n",
